# Algorithms-and-AI-project

./: README.md  Specification document  Specification document.md  Weekly report 1  Weekly report 1.md  implementation_report.md  main.py  pyproject.toml  testing_documentation.md  user_guide.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
ai/: expectiminimax.py  heuristic.py
game/: board.py  interface.py
src/: main.py
src/ai/: expectiminimax.py  heuristic.py
src/game/: board.py
src/tests/: 2048_test.py
test-folder/: test-file.txt
tests/: 2048_test.py
