[project]
name = "algorithms-and-ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "epicoderr",email = "nikolasrbinoski6@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group."dev~".dependencies]
pylint = "^3.3.8"
coverage = "^7.10.7"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
pytest = "^8.4.2"
coverage = "^7.10.7"

